--- a/lib/styles/header.module.css
+++ b/lib/styles/header.module.css
@@ -30,9 +30,9 @@
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  padding: 0 1rem;
+  padding: 1rem 0 1rem 0;
 }
 
 .logoContainer {
