--- a/lib/styles/header.module.css
+++ b/lib/styles/header.module.css
@@ -30,9 +30,16 @@
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
-  padding: 1rem 0 1rem 0;
+  padding: 1rem 1rem 1rem 1rem;
+}
+
+@media (min-width: 768px) {
+  .headerContent {
+    justify-content: flex-end;
+    padding: 1rem 0 1rem 0;
+  }
 }
 
 .logoContainer {
