--- a/app/globals.css
+++ b/app/globals.css
@@ -139,6 +139,16 @@
     background-color: inherit !important;
   }
 
+  /* Fix autofill background color for dark themes */
+  input:-webkit-autofill,
+  textarea:-webkit-autofill,
+  select:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px #1a1a1a inset !important;
+    -webkit-text-fill-color: white !important;
+    background-color: transparent !important;
+    border-color: rgb(55 65 81) !important; /* gray-700 */
+  }
+
   /* Remove selection borders */
   *::selection,
   *::-moz-selection {
